tropo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: tropo-react
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: tropo-react
