tropo-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tropo-react
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tropo-react
                port:
                  number: 80
